Add Tosho and Description on detail page

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -33,8 +33,8 @@ h2 {
         <div class="col-12"> &nbsp </div>
         <div class="col-12"><h2>このサイトについて</h2><br>
 		<p>このサイトでは一個人の実験的な試みとして、各企業が金融庁に提出しているXBRLと株価情報、また検索トレンドの情報をベースに作成したWebサービスです。</p>
-		<p>個人投資家が投資判断を行う際、財務データは企業HPのIRページから取得し、株価はヤフーファイナンスから取得するという煩雑になりがちな</p>
-		<p>財務分析作業を自動かつひとつのツールとして提供することで、より手軽に分析することを目指して作成しました。</p>
+		<p>個人投資家が投資判断を行う際、財務データは企業HPのIRページから取得し、株価は他サイトから取得するという煩雑になりがちな財務分析作業を</p>
+		<p>自動かつひとつのツールとして提供することで、より手軽に分析することを目指して作成しました。</p>
 		<p>まだまだ未完成な部分が多いですが、絶賛開発中ですのでご関心を持たれた方は一度触っていただけますと幸いです。</p></div>
 		<div class="col-12"> &nbsp </div>
         <div class="col-12"><h2>免責事項</h2><br>
