--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -47,8 +47,8 @@
 			<td style="width:80%">{{edinetcodeinfo.businesstype}}</td>
 		</tr>
 		<tr>
-			<th style="width:20%">URL(IR)</th>
-			<td style="width:80%"></td>
+			<th style="width:20%">上場区分</th>
+			<td style="width:80%">{{edinetcodeinfo.tosho}}</td>
 		</tr>
 		<tr>
 			<th style="width:20%">決算月</th>
@@ -56,7 +56,7 @@
 		</tr>
 		<tr>
 			<th style="width:20%">特色</th>
-			<td style="width:80%">-</td>
+			<td style="width:80%">{{edinetcodeinfo.description}}</td>
 		</tr>
 		</table>
 	{% endfor %}
