--- a/app/templates/gtrend.html
+++ b/app/templates/gtrend.html
@@ -57,8 +57,8 @@ h4 {
 			<td style="width:80%">{{edinetcodeinfo.businesstype}}</td>
 		</tr>
 		<tr>
-			<th style="width:20%">URL(IR)</th>
-			<td style="width:80%"></td>
+			<th style="width:20%">上場区分</th>
+			<td style="width:80%">{{edinetcodeinfo.tosho}}</td>
 		</tr>
 		<tr>
 			<th style="width:20%">決算月</th>
@@ -66,7 +66,7 @@ h4 {
 		</tr>
 		<tr>
 			<th style="width:20%">特色</th>
-			<td style="width:80%">-</td>
+			<td style="width:80%">{{edinetcodeinfo.description}}</td>
 		</tr>
 		</table>
 	{% endfor %}
