Add News Feature

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -45,8 +45,9 @@ h2 {
 		<p>また、当サイトで掲載している情報につきましては、一切の予告なく内容を変更、掲載の中止等を行う可能性があります。あらかじめご了承ください。</p>
 		</div>
 		<div class="col-12"> &nbsp </div>
-        <div class="col-12"><h2>開発履歴(ブログ)</h2><br>
-		<a href="https://ycopy-icopy.netlify.app/">https://ycopy-icopy.netlify.app/</a>
+        <div class="col-12"><h2>開発履歴(ブログ&Git)</h2><br>
+		<a href="hhttps://github.com/RuBisCO28/FinancialEye">Github</a>
+		<a href="https://ycopy-icopy.netlify.app/">Blog</a>
 		</div>
 		</div>
       </div>
