--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,8 +22,7 @@
       <div class="row justify-content-center align-items-center">
 	    <div class="col-12"> &nbsp </div>
 		<div class="col-12"> &nbsp </div>
-        <div class="col-12"><h1 class="text-center">Financial Eye 360</h1></div>
-        <div class="col-12"> &nbsp </div>
+        <div class="col-12"><h1 class="text-center">Financial Eye 360</h1><h4 class="text-center">Search for a stock to start your analysis</h4></div>
         <div class="col-12"> &nbsp </div>
         <form action="/search" method="GET">
           <div class="form-group">
