--- a/app/templates/stock.html
+++ b/app/templates/stock.html
@@ -31,6 +31,7 @@
         <ul class="list-unstyled">
             <li><a href="/company/{{code}}">業績データ(通期)</a></li>
             <li><a href="#">株価データ</a></li>
+			<li><a href="/news/{{code}}">ニュース</a></li>
             <li><a href="/gtrend/{{code}}">Googleトレンド</a></li>
         </ul>
     </div>
