--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -46,8 +46,10 @@ h2 {
 		</div>
 		<div class="col-12"> &nbsp </div>
         <div class="col-12"><h2>開発履歴(ブログ&Git)</h2><br>
-		<a href="hhttps://github.com/RuBisCO28/FinancialEye">Github</a>
-		<a href="https://ycopy-icopy.netlify.app/">Blog</a>
+		<ul>
+		<li><a href="hhttps://github.com/RuBisCO28/FinancialEye">Github</a></li>
+		<li><a href="https://ycopy-icopy.netlify.app/">Blog</a></li>
+		</ul>
 		</div>
 		</div>
       </div>
