Add pagination feature

--- a/app/templates/buisnesstype.html
+++ b/app/templates/buisnesstype.html
@@ -42,6 +42,9 @@
 		</tr>
 		{% endfor %}
 		</table>
+		<div class="col-12"> &nbsp </div>
+		{{ pagination.info }}
+		{{ pagination.links }}
     </div>
 	
     <script src="https://riversun.github.io/chatux/chatux.min.js"></script>
